Finish analysis of thermal anomalies

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,84 @@
 
+@inproceedings{han_state_2020,
+	title = {State of the art in digital surface modelling from multi-view high resolution satellite images},
+	volume = {V-2-2020},
+	url = {https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-2-2020/351/2020/},
+	doi = {10.5194/isprs-annals-V-2-2020-351-2020},
+	abstract = {{\textbackslash}textlessp{\textbackslash}textgreater{\textbackslash}textlessstrong class="journal-contentHeaderColor"{\textbackslash}textgreaterAbstract.{\textbackslash}textless/strong{\textbackslash}textgreater Data from the optical satellite imaging sensors running 24/7, is collecting in embarrassing abundance nowadays. Besides more suitable for large-scale mapping, multi-view high-resolution satellite images (HRSI) are cheaper when comparing to Light Detection And Ranging (LiDAR) data and aerial remotely sensed images, which are more accessible sources for digital surface modelling and updating. Digital Surface Model (DSM) generation is one of the most critical steps for mapping, 3D modelling, and semantic interpretation. Computing DSM from this dataset is relatively new, and several solutions exist in the market, both commercial and open-source solutions, the performances of these solutions have not yet been comprehensively analyzed. Although some works and challenges have focused on the DSM generation pipeline and the geometric accuracy of the generated DSM, the evaluations, however, do not consider the latest solutions as the fast development in this domain. In this work, we discussed the pipeline of the considered both commercial and opensource solutions, assessed the accuracy of the multi-view satellite image-based DSMs generation methods with LiDAR-derived DSM as the ground truth. Three solutions, including Satellite Stereo Pipeline (S2P), PCI Geomatica, and Agisoft Metashape, are evaluated on a WorldView-3 multi-view satellite dataset both quantitatively and qualitatively with the LiDAR ground truth. Our comparison and findings are presented in the experimental section.{\textbackslash}textless/p{\textbackslash}textgreater},
+	language = {English},
+	urldate = {2021-12-16},
+	booktitle = {{ISPRS} {Annals} of the {Photogrammetry}, {Remote} {Sensing} and {Spatial} {Information} {Sciences}},
+	publisher = {Copernicus GmbH},
+	author = {Han, Y. and Wang, S. and Gong, D. and Wang, Y. and Wang, Y. and Ma, X.},
+	month = aug,
+	year = {2020},
+	pages = {351--356},
+}
+
+@article{kumar_new_2021,
+	title = {New effective spectral matching measures for hyperspectral data analysis},
+	volume = {42},
+	issn = {0143-1161},
+	url = {https://doi.org/10.1080/01431161.2021.1890265},
+	doi = {10.1080/01431161.2021.1890265},
+	abstract = {The successful implementation of Spectral Matching Measures (SMMs) often plays a crucial role in material discrimination and classification using hyperspectral dataset. The commonly exploited SMMs, such as Spectral Angle Mapper (SAM), Spectral Information Divergence (SID), and their hybrid, i.e., SIDSAMtan, show limited discrimination ability while discriminating spectrally similar materials. This study presents three new effective SMMs named Dice Spectral Similarity Coefficient (DSSC), Kumar–Johnson Spectral Similarity Coefficient (KJSSC), and a hybrid of DSSC and KJSSC, i.e., KJDSSCtan, for accurate discrimination of spectrally similar materials. A wide range of hyperspectral datasets of minerals and vegetation acquired under laboratory and real atmospheric conditions were used to compare and evaluate the performance of newly proposed and existing SMMs using Relative Spectral Discrimination Power (RSDPW) statistics. We also assessed the discrimination ability of the proposed and existing SMMs using spectra of selected minerals and vegetation species with an added component of random noise and linearly synthesized mixed spectra. An in-depth comparison and evaluation of different SMMs demonstrated that the discrimination power of the proposed SMMs is significantly higher than existing SMMs. The proposed SMMs also outperform existing SMMs when discriminating noisy and linearly synthesized mixed counterparts. The KJSSC and DSSC show similar efficacy in discriminating spectra of minerals and vegetation, whereas their hybrid measure, i.e., KJDSSCtan shows significantly higher spectral discrimination ability. Therefore, the newly proposed hybrid measure, i.e., KJDSSCtan is recommended over existing SMMs for successful material discrimination and classification using hyperspectral data.},
+	number = {11},
+	urldate = {2023-02-24},
+	journal = {International Journal of Remote Sensing},
+	author = {Kumar, Chandan and Chatterjee, Snehamoy and Oommen, Thomas and Guha, Arindam},
+	month = jun,
+	year = {2021},
+	pages = {4126--4156},
+}
+
+@phdthesis{poux_smart_2019,
+	address = {Liège, Belgique},
+	type = {{PhD} {Thesis}},
+	title = {The {Smart} {Point} {Cloud}: {Structuring} {3D} intelligent point data},
+	shorttitle = {The {Smart} {Point} {Cloud}},
+	url = {https://orbi.uliege.be/handle/2268/235520},
+	abstract = {Discrete spatial datasets known as point clouds often lay the groundwork for decision-making applications. E.g., we can use such data as a reference for autonomous cars and robot’s navigation, as a layer for floor-plan’s creation and building’s construction, as a digital asset for environment modelling and incident prediction... Applications are numerous, and potentially increasing if we consider point clouds as digital reality assets. Yet, this expansion faces technical limitations mainly from the lack of semantic information within point ensembles. Connecting knowledge sources is still a very manual and time-consuming process suffering from error-prone human interpretation. This highlights a strong need for domain-related data analysis to create a coherent and structured information. The thesis clearly tries to solve automation problematics in point cloud processing to create intelligent environments, i.e. virtual copies that can be used/integrated in fully autonomous reasoning services. We tackle point cloud questions associated with knowledge extraction – particularly segmentation and classification – structuration, visualisation and interaction with cognitive decision systems. We propose to connect both point cloud properties and formalized knowledge to rapidly extract pertinent information using domain-centered graphs. The dissertation delivers the concept of a Smart Point Cloud (SPC) Infrastructure which serves as an interoperable and modular architecture for a unified processing. It permits an easy integration to existing workflows and a multi-domain specialization through device knowledge, analytic knowledge or domain knowledge. Concepts, algorithms, code and materials are given to replicate findings and extend current applications.},
+	language = {en},
+	urldate = {2021-12-26},
+	school = {Université de Liège, Liège, Belgique},
+	author = {Poux, Florent},
+	month = jun,
+	year = {2019},
+}
+
+@article{modrego-fernandez_propuesta_2022,
+	title = {Propuesta metodológica para análisis arqueológicos de altitud: aplicación al {Castillo} de {Arenas} ({Campillo} de {Arenas}, {Jaén})},
+	copyright = {Derechos de autor 2022 Cuadernos de Arqueología de la Universidad de Navarra},
+	issn = {2387-1814},
+	shorttitle = {Propuesta metodológica para análisis arqueológicos de altitud},
+	url = {https://revistas.unav.edu/index.php/cuadernos-de-arqueologia/article/view/42145},
+	doi = {10.15581/012.30.2.012},
+	abstract = {This article tries to establish a methodology on altitude analysis in Landscape Archaeology. The interest of this variable for studies of historical settlement has been relegated by the prominence for the protagonism of other such as the visibility or the capture of nearby resources. In this way, two methods are exposed, with two different work scales, in order to create this non-existent corpus. As a case study, the Castillo de Arenas (Campillo de Arenas, Jaén) is presented, a fortress that operated on the Castilian-Nasrid border between the 13th-15th centuries.},
+	language = {es},
+	urldate = {2023-04-05},
+	journal = {Cuadernos de Arqueología de la Universidad de Navarra},
+	author = {Modrego-Fernández, Roque and Martín-Civantos, José-María},
+	month = dec,
+	year = {2022},
+	keywords = {Altitud, Arqueología del Paisaje, Estadística Espacial, SIG, fortalezas islámicas},
+	pages = {273--300},
+}
+
+@article{fernandez_hervas_castillo_1986,
+	title = {El castillo de {Arenas}, fortaleza nazarita del {Reino} de {Granada}},
+	issn = {0008-7505},
+	url = {https://dialnet.unirioja.es/servlet/articulo?codigo=7032847},
+	language = {spa},
+	number = {91},
+	urldate = {2023-04-05},
+	journal = {Castillos de España: publicación de la Asociación Española de Amigos de los Castillos},
+	author = {Fernández Hervás, Enrique},
+	year = {1986},
+	note = {Publisher: Asociación Española de Amigos de los Castillos
+Section: Castillos de España: publicación de la Asociación Española de Amigos de los Castillos},
+	pages = {41--44},
+}
+
 @article{buslaev_albumentations_2020,
 	title = {Albumentations: {Fast} and {Flexible} {Image} {Augmentations}},
 	volume = {11},
@@ -5046,24 +5126,6 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	pages = {3--17},
 }
 
-@article{kumar_new_2021,
-	title = {New effective spectral matching measures for hyperspectral data analysis},
-	volume = {42},
-	issn = {0143-1161},
-	url = {https://doi.org/10.1080/01431161.2021.1890265},
-	doi = {10.1080/01431161.2021.1890265},
-	abstract = {The successful implementation of Spectral Matching Measures (SMMs) often plays a crucial role in material discrimination and classification using hyperspectral dataset. The commonly exploited SMMs, such as Spectral Angle Mapper (SAM), Spectral Information Divergence (SID), and their hybrid, i.e., SIDSAMtan, show limited discrimination ability while discriminating spectrally similar materials. This study presents three new effective SMMs named Dice Spectral Similarity Coefficient (DSSC), Kumar–Johnson Spectral Similarity Coefficient (KJSSC), and a hybrid of DSSC and KJSSC, i.e., KJDSSCtan, for accurate discrimination of spectrally similar materials. A wide range of hyperspectral datasets of minerals and vegetation acquired under laboratory and real atmospheric conditions were used to compare and evaluate the performance of newly proposed and existing SMMs using Relative Spectral Discrimination Power (RSDPW) statistics. We also assessed the discrimination ability of the proposed and existing SMMs using spectra of selected minerals and vegetation species with an added component of random noise and linearly synthesized mixed spectra. An in-depth comparison and evaluation of different SMMs demonstrated that the discrimination power of the proposed SMMs is significantly higher than existing SMMs. The proposed SMMs also outperform existing SMMs when discriminating noisy and linearly synthesized mixed counterparts. The KJSSC and DSSC show similar efficacy in discriminating spectra of minerals and vegetation, whereas their hybrid measure, i.e., KJDSSCtan shows significantly higher spectral discrimination ability. Therefore, the newly proposed hybrid measure, i.e., KJDSSCtan is recommended over existing SMMs for successful material discrimination and classification using hyperspectral data.},
-	number = {11},
-	urldate = {2023-02-24},
-	journal = {International Journal of Remote Sensing},
-	author = {Kumar, Chandan and Chatterjee, Snehamoy and Oommen, Thomas and Guha, Arindam},
-	month = jun,
-	year = {2021},
-	note = {Publisher: Taylor \& Francis
-\_eprint: https://doi.org/10.1080/01431161.2021.1890265},
-	pages = {4126--4156},
-}
-
 @article{cardenas_reconstruction_2022,
 	title = {Reconstruction of tree branching structures from {UAV}-{LiDAR} data},
 	volume = {10},
@@ -6906,22 +6968,6 @@ Publisher: Schweizerbart Science Publishers},
 	pages = {162099--162121},
 }
 
-@inproceedings{han_state_2020,
-	title = {{STATE} {OF} {THE} {ART} {IN} {DIGITAL} {SURFACE} {MODELLING} {FROM} {MULTI}-{VIEW} {HIGH}-{RESOLUTION} {SA}℡{LITE} {IMAGES}},
-	volume = {V-2-2020},
-	url = {https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-2-2020/351/2020/},
-	doi = {10.5194/isprs-annals-V-2-2020-351-2020},
-	abstract = {{\textbackslash}textlessp{\textbackslash}textgreater{\textbackslash}textlessstrong class="journal-contentHeaderColor"{\textbackslash}textgreaterAbstract.{\textbackslash}textless/strong{\textbackslash}textgreater Data from the optical satellite imaging sensors running 24/7, is collecting in embarrassing abundance nowadays. Besides more suitable for large-scale mapping, multi-view high-resolution satellite images (HRSI) are cheaper when comparing to Light Detection And Ranging (LiDAR) data and aerial remotely sensed images, which are more accessible sources for digital surface modelling and updating. Digital Surface Model (DSM) generation is one of the most critical steps for mapping, 3D modelling, and semantic interpretation. Computing DSM from this dataset is relatively new, and several solutions exist in the market, both commercial and open-source solutions, the performances of these solutions have not yet been comprehensively analyzed. Although some works and challenges have focused on the DSM generation pipeline and the geometric accuracy of the generated DSM, the evaluations, however, do not consider the latest solutions as the fast development in this domain. In this work, we discussed the pipeline of the considered both commercial and opensource solutions, assessed the accuracy of the multi-view satellite image-based DSMs generation methods with LiDAR-derived DSM as the ground truth. Three solutions, including Satellite Stereo Pipeline (S2P), PCI Geomatica, and Agisoft Metashape, are evaluated on a WorldView-3 multi-view satellite dataset both quantitatively and qualitatively with the LiDAR ground truth. Our comparison and findings are presented in the experimental section.{\textbackslash}textless/p{\textbackslash}textgreater},
-	language = {English},
-	urldate = {2021-12-16},
-	booktitle = {{ISPRS} {Annals} of the {Photogrammetry}, {Remote} {Sensing} and {Spatial} {Information} {Sciences}},
-	publisher = {Copernicus GmbH},
-	author = {Han, Y. and Wang, S. and Gong, D. and Wang, Y. and Wang, Y. and Ma, X.},
-	month = aug,
-	year = {2020},
-	pages = {351--356},
-}
-
 @article{saralioglu_semantic_2020,
 	title = {Semantic segmentation of land cover from high resolution multispectral satellite images by spectral-spatial convolutional neural network},
 	volume = {0},
@@ -8017,21 +8063,6 @@ Publisher: Schweizerbart Science Publishers},
 	author = {Hoegner, Ludwig and Abmayr, Thomas and Tosic, Dragana and Turzer, S. and Stilla, Uwe},
 	month = jan,
 	year = {2018},
-}
-
-@phdthesis{poux_smart_2019,
-	address = {Liège, ​​Belgique},
-	type = {{PhD} {Thesis}},
-	title = {The {Smart} {Point} {Cloud}: {Structuring} {3D} intelligent point data},
-	shorttitle = {The {Smart} {Point} {Cloud}},
-	url = {https://orbi.uliege.be/handle/2268/235520},
-	abstract = {Discrete spatial datasets known as point clouds often lay the groundwork for decision-making applications. E.g., we can use such data as a reference for autonomous cars and robot’s navigation, as a layer for floor-plan’s creation and building’s construction, as a digital asset for environment modelling and incident prediction... Applications are numerous, and potentially increasing if we consider point clouds as digital reality assets. Yet, this expansion faces technical limitations mainly from the lack of semantic information within point ensembles. Connecting knowledge sources is still a very manual and time-consuming process suffering from error-prone human interpretation. This highlights a strong need for domain-related data analysis to create a coherent and structured information. The thesis clearly tries to solve automation problematics in point cloud processing to create intelligent environments, i.e. virtual copies that can be used/integrated in fully autonomous reasoning services. We tackle point cloud questions associated with knowledge extraction – particularly segmentation and classification – structuration, visualisation and interaction with cognitive decision systems. We propose to connect both point cloud properties and formalized knowledge to rapidly extract pertinent information using domain-centered graphs. The dissertation delivers the concept of a Smart Point Cloud (SPC) Infrastructure which serves as an interoperable and modular architecture for a unified processing. It permits an easy integration to existing workflows and a multi-domain specialization through device knowledge, analytic knowledge or domain knowledge. Concepts, algorithms, code and materials are given to replicate findings and extend current applications.},
-	language = {en},
-	urldate = {2021-12-26},
-	school = {Université de Liège, ​Liège, ​​Belgique},
-	author = {Poux, Florent},
-	month = jun,
-	year = {2019},
 }
 
 @inproceedings{schneider_fusing_2010,
