Include vineyard chapter

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,76 @@
 
+@misc{mcinnes_umap_2020,
+	title = {{UMAP}: {Uniform} {Manifold} {Approximation} and {Projection} for {Dimension} {Reduction}},
+	shorttitle = {{UMAP}},
+	url = {http://arxiv.org/abs/1802.03426},
+	doi = {10.48550/arXiv.1802.03426},
+	abstract = {UMAP (Uniform Manifold Approximation and Projection) is a novel manifold learning technique for dimension reduction. UMAP is constructed from a theoretical framework based in Riemannian geometry and algebraic topology. The result is a practical scalable algorithm that applies to real world data. The UMAP algorithm is competitive with t-SNE for visualization quality, and arguably preserves more of the global structure with superior run time performance. Furthermore, UMAP has no computational restrictions on embedding dimension, making it viable as a general purpose dimension reduction technique for machine learning.},
+	urldate = {2023-04-09},
+	publisher = {arXiv},
+	author = {McInnes, Leland and Healy, John and Melville, James},
+	month = sep,
+	year = {2020},
+	note = {arXiv:1802.03426 [cs, stat]},
+	keywords = {Computer Science - Computational Geometry, Computer Science - Machine Learning, Statistics - Machine Learning},
+}
+
+@book{chollet_deep_2021,
+	title = {Deep {Learning} with {Python}, {Second} {Edition}},
+	isbn = {978-1-63835-009-5},
+	abstract = {Unlock the groundbreaking advances of deep learning with this extensively revised edition of the bestselling original. Learn directly from the creator of Keras and master practical Python deep learning techniques that are easy to apply in the real world.In Deep Learning with Python, Second Edition you will learn:  Deep learning from first principles Image classification \& image segmentation Timeseries forecasting Text classification and machine translation Text generation, neural style transfer, and image generation  Deep Learning with Python has taught thousands of readers how to put the full capabilities of deep learning into action. This extensively revised second edition introduces deep learning using Python and Keras, and is loaded with insights for both novice and experienced ML practitioners. You’ll learn practical techniques that are easy to apply in the real world, and important theory for perfecting neural networks.  Purchase of the print book includes a free eBook in PDF, Kindle, and ePub formats from Manning Publications.  About the technology Recent innovations in deep learning unlock exciting new software capabilities like automated language translation, image recognition, and more. Deep learning is becoming essential knowledge for every software developer, and modern tools like Keras and TensorFlow put it within your reach, even if you have no background in mathematics or data science.   About the book Deep Learning with Python, Second Edition introduces the field of deep learning using Python and the powerful Keras library. In this new edition, Keras creator François Chollet offers insights for both novice and experienced machine learning practitioners. As you move through this book, you’ll build your understanding through intuitive explanations, crisp illustrations, and clear examples. You’ll pick up the skills to start developing deep-learning applications.  What's inside  Deep learning from first principles Image classification and image segmentation Time series forecasting Text classification and machine translation Text generation, neural style transfer, and image generation  About the reader For readers with intermediate Python skills. No previous experience with Keras, TensorFlow, or machine learning is required.  About the author François Chollet is a software engineer at Google and creator of the Keras deep-learning library.  Table of Contents 1 What is deep learning? 2 The mathematical building blocks of neural networks 3 Introduction to Keras and TensorFlow 4 Getting started with neural networks: Classification and regression 5 Fundamentals of machine learning 6 The universal workflow of machine learning 7 Working with Keras: A deep dive 8 Introduction to deep learning for computer vision 9 Advanced deep learning for computer vision 10 Deep learning for timeseries 11 Deep learning for text 12 Generative deep learning 13 Best practices for the real world 14 Conclusions},
+	language = {en},
+	publisher = {Simon and Schuster},
+	author = {Chollet, Francois},
+	month = dec,
+	year = {2021},
+	note = {Google-Books-ID: mjVKEAAAQBAJ},
+	keywords = {Computers / Data Science / Machine Learning, Computers / Data Science / Neural Networks, Computers / Languages / Python},
+}
+
+@misc{szegedy_going_2014,
+	title = {Going {Deeper} with {Convolutions}},
+	url = {http://arxiv.org/abs/1409.4842},
+	doi = {10.48550/arXiv.1409.4842},
+	abstract = {We propose a deep convolutional neural network architecture codenamed "Inception", which was responsible for setting the new state of the art for classification and detection in the ImageNet Large-Scale Visual Recognition Challenge 2014 (ILSVRC 2014). The main hallmark of this architecture is the improved utilization of the computing resources inside the network. This was achieved by a carefully crafted design that allows for increasing the depth and width of the network while keeping the computational budget constant. To optimize quality, the architectural decisions were based on the Hebbian principle and the intuition of multi-scale processing. One particular incarnation used in our submission for ILSVRC 2014 is called GoogLeNet, a 22 layers deep network, the quality of which is assessed in the context of classification and detection.},
+	urldate = {2023-04-09},
+	publisher = {arXiv},
+	author = {Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
+	month = sep,
+	year = {2014},
+	note = {arXiv:1409.4842 [cs]
+version: 1},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+}
+
+@inproceedings{ravikumar_hyperspectral_2022,
+	title = {Hyperspectral {Image} {Classification} {Using} {Deep} {Matrix} {Capsules}},
+	volume = {01},
+	doi = {10.1109/ICDSAAI55433.2022.10028853},
+	abstract = {Hyperspectral image (HSI) classification is used in multiple domains like precision agriculture, mineral exploration, remote sensing, and others. Conventionally, couvolutional neural networks (CNNs) were used in HSI classification, however they have limitations in exploiting spectral-spatial relationships, which is a key factor in understanding HSI. Even though deeper CNN architectures and use of 3-D-CNNs mitigate the above problem to a certain extent, they have increased computational complexity, which inhibits their use in resource-limited devices like IoT and edge computing devices. In this paper, we propose a novel method based on the concept of matrix capsules with Expectation-Maximization (EM) routing algorithm which is specifically designed to accommodate the nuances in the HSI data to efficiently tackle the aforementioned problems. The capsule units enable effective identification of spectral siguatures and part-whole relationships in the data while EM routing ensures viewpoint-invariance. Three representative HSI data sets are used to verify the effectiveness of the proposed method. The empirical results demonstrate that the proposed method is better than the current state-of-the-art methods in terms of accuracy while having 25 times fewer model parameters and requiring over 65 times less storage space. The source code can be found at https://github.com/DeepMatrixCapsules/DeepMatrixCapsules.},
+	booktitle = {2022 {International} {Conference} on {Data} {Science}, {Agents} \& {Artificial} {Intelligence} ({ICDSAAI})},
+	author = {Ravikumar, Anirudh and Rohit, P N and Nair, Mydhili K and Bhatia, Vimal},
+	month = dec,
+	year = {2022},
+	keywords = {Benchmark testing, Capsule network, Computer architecture, Feature extraction, Neural networks, Routing, Sensors, Source coding, classification, convolutional neural network (CNN), deep learning, expectation-maximization (EM) routing, hyperspectral image (HSI) classification, matrix capsule, remote sensing, spectral-spatial, viewpoint-invariance},
+	pages = {1--7},
+}
+
+@misc{chollet_xception_2017,
+	title = {Xception: {Deep} {Learning} with {Depthwise} {Separable} {Convolutions}},
+	shorttitle = {Xception},
+	url = {http://arxiv.org/abs/1610.02357},
+	doi = {10.48550/arXiv.1610.02357},
+	abstract = {We present an interpretation of Inception modules in convolutional neural networks as being an intermediate step in-between regular convolution and the depthwise separable convolution operation (a depthwise convolution followed by a pointwise convolution). In this light, a depthwise separable convolution can be understood as an Inception module with a maximally large number of towers. This observation leads us to propose a novel deep convolutional neural network architecture inspired by Inception, where Inception modules have been replaced with depthwise separable convolutions. We show that this architecture, dubbed Xception, slightly outperforms Inception V3 on the ImageNet dataset (which Inception V3 was designed for), and significantly outperforms Inception V3 on a larger image classification dataset comprising 350 million images and 17,000 classes. Since the Xception architecture has the same number of parameters as Inception V3, the performance gains are not due to increased capacity but rather to a more efficient use of model parameters.},
+	urldate = {2023-04-09},
+	publisher = {arXiv},
+	author = {Chollet, François},
+	month = apr,
+	year = {2017},
+	note = {arXiv:1610.02357 [cs]
+version: 3},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+}
+
 @inproceedings{han_state_2020,
 	title = {State of the art in digital surface modelling from multi-view high resolution satellite images},
 	volume = {V-2-2020},
